<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:textSize="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/promo2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="35dp"
        app:cardElevation="7dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/transfer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="32dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="7dp"
                    android:onClick="transferBtn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/transfer"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/top_up"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="20dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/home"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pay"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="30dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="7dp"
                    android:onClick="topUpBtn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/top_up"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/promo1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/balanceCard"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp">

        <ImageView
            android:id="@+id/bg_promo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/promotion_final" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/promo2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/promo1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp">

        <ImageView
            android:id="@+id/bg_promo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/promotion_final" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/bg_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        app:srcCompat="@drawable/saving" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/balanceCard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/undraw_male_avatar_323b" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/cash"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/balance"
                    android:textColor="@color/colorAccent"
                    android:textSize="50sp" />
            </TableRow>

        </TableLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>