<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TransferActicity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="24dp"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="35dp"
        app:cardElevation="7dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="32dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:id="@+id/transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/transfer"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="32dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="7dp"
                    android:onClick="homeBtn">

                    <TextView
                        android:id="@+id/top_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/home"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="32dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="7dp"
                    android:onClick="topUpBtn">

                    <TextView
                        android:id="@+id/pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/top_up"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/bg_main_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        app:srcCompat="@drawable/saving" /> <!--    image background-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/rekeningInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/balanceCard"
        android:layout_alignStart="@+id/balanceCard"
        android:layout_alignEnd="@+id/balanceCard"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:inputType="number"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nominalInput"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/balanceCard"
        android:layout_alignStart="@+id/balanceCard"
        android:layout_alignEnd="@+id/balanceCard"
        android:layout_marginStart="0dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="0dp"
        android:inputType="number"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transferBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/nominalInput"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:text="@string/transfer"
        app:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/balanceCard"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="7dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/balanceCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="100dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/transfer"
                    android:textColor="@color/colorAccent"
                    android:textSize="50sp" />
            </TableRow>

        </TableLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>